# standup-cli

./: .gitignore  .npmignore  README.md  V0_3_PREP_LOG.md  package.json  pyproject.toml
standup_cli/: main.py
