[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standup-cli-tool"
version = "0.1.1"
description = "⚡ Generate your daily standup from git commits — right in your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["standup", "cli", "git", "developer", "productivity", "scrum"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.scripts]
standup = "standup_cli.main:main"

[project.urls]
Homepage = "https://github.com/muhtalhakhan/standup-cli"
Repository = "https://github.com/muhtalhakhan/standup-cli"
Issues = "https://github.com/muhtalhakhan/standup-cli/issues"
